--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
        <!-- navbar -->
